# nuttx-apps

./: CMakeLists.txt
audioutils/: CMakeLists.txt
boot/: CMakeLists.txt
builtin/: CMakeLists.txt  Makefile
canutils/: CMakeLists.txt
crypto/: CMakeLists.txt
examples/: CMakeLists.txt
fsutils/: CMakeLists.txt
gpsutils/: CMakeLists.txt
graphics/: CMakeLists.txt
graphics/lvgl/: Kconfig  (+2 more)
industry/: CMakeLists.txt
interpreters/: CMakeLists.txt
math/: CMakeLists.txt
mlearning/: CMakeLists.txt
modbus/: CMakeLists.txt
netutils/: CMakeLists.txt
nshlib/: CMakeLists.txt  nsh_romfsimg.h  nsh_syscmds.c
osi/: CMakeLists.txt  Make.defs  Makefile
platform/: CMakeLists.txt
system/: CMakeLists.txt
system/cdcacm/: CMakeLists.txt
system/cle/: CMakeLists.txt
system/composite/: CMakeLists.txt
system/critmon/: CMakeLists.txt
system/cu/: CMakeLists.txt
system/dhcpc/: CMakeLists.txt
system/embedlog/: CMakeLists.txt
system/flash_eraseall/: CMakeLists.txt
system/hex2bin/: CMakeLists.txt
system/hexed/: CMakeLists.txt
system/hostname/: CMakeLists.txt
system/i2c/: CMakeLists.txt
system/libuv/: Makefile
system/libuv/libuv/.github/: CODEOWNERS
system/libuv/libuv/src/: uv-common.c
system/libuv/libuv/src/unix/: nuttx.c
system/lm75/: CMakeLists.txt
system/lzf/: CMakeLists.txt
system/mdio/: CMakeLists.txt
system/netdb/: CMakeLists.txt
system/nsh/: CMakeLists.txt
system/ntpc/: CMakeLists.txt
system/nxplayer/: CMakeLists.txt
system/nxrecorder/: CMakeLists.txt
system/ping/: CMakeLists.txt
system/ping6/: CMakeLists.txt
system/popen/: CMakeLists.txt
system/ramtest/: CMakeLists.txt
system/readline/: CMakeLists.txt
system/sched_note/: CMakeLists.txt  note_main.c
system/setlogmask/: CMakeLists.txt
system/stackmonitor/: CMakeLists.txt
system/system/: CMakeLists.txt
system/taskset/: CMakeLists.txt
system/tee/: CMakeLists.txt
system/telnet/: CMakeLists.txt
system/trace/: trace.c  trace.h  trace_dump.c
system/ubloxmodem/: CMakeLists.txt
system/usbmsc/: CMakeLists.txt
system/vi/: CMakeLists.txt
system/zmodem/: CMakeLists.txt
testing/: CMakeLists.txt
(+322 files in other folders)
